[metadata]
name = easy_perlin_noise-AngrySwarmOfBees
version = 0.0.1
author = Ben Mowery
author_email = ben.mowery@icloud.com
description = A package to streamline the usage of the perlin_noise package into one line of code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AngrySwarmOfBees/easy_perlin_noise
project_urls =
    Bug Tracker = https://github.com/AngrySwarmOfBees/easy_perlin_noise/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src